--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
     "styled-components": "^4.1.1"
   }
 }
